# axum-aws-lambda

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  test.json  test.sh  test_lambda_runtime.py
examples/: main.rs
src/: lib.rs  main.rs
test-lambda-runtime/: Dockerfile  test_lambda_runtime.py
