[package]
name = "axum-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
lambda_http = "0.5"
hyper = "0.14"
bytes = "1.0"
http = "0.2"
tower = "0.4"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt"] }
tower-http = { version = "0.2", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"