[package]
name = "axum-aws-lambda"
version = "0.3.0"
edition = "2021"
authors = ["Michael Lazear"]
description = "Tower Layer for compatibility between Axum and AWS Lambda Runtime"
readme = "README.md"
homepage = "https://github.com/lazear/axum-aws-lambda"
repository = "https://github.com/lazear/axum-aws-lambda"
license ="MIT"
keywords = ["axum", "lambda", "tower", "aws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
lambda_http = "0.7"
hyper = "0.14"
bytes = "1"
http = "0.2"
tower = "0.4"
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt"] }
tower-http = { version = "0.3", features = ["cors", "compression-gzip", "compression-deflate", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
