[package]
name = "axum-aws-lambda"
version = "0.9.0"
edition = "2021"
authors = ["Michael Lazear"]
description = "Tower Layer for compatibility between Axum and AWS Lambda Runtime"
readme = "README.md"
homepage = "https://github.com/lazear/axum-aws-lambda"
repository = "https://github.com/lazear/axum-aws-lambda"
license = "MIT"
keywords = ["axum", "lambda", "tower", "aws"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
lambda_http = "0.14"
hyper = "1.0"
bytes = "1.5"
http = "1"
tower = "0.5"
tower-service = "0.3"
futures-util = "0.3"
http-body-util = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-gzip",
    "compression-deflate",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
